RESOLVED FIXED131262
REGRESSION (NetworkProcess): Subresources fail to load from AppCache
https://bugs.webkit.org/show_bug.cgi?id=131262
Summary REGRESSION (NetworkProcess): Subresources fail to load from AppCache
Alexey Proskuryakov
Reported 2014-04-04 23:04:40 PDT
Main resource loads, but subresources don't. <rdar://problem/15370653>
Attachments
proposed fix (15.74 KB, patch)
2014-04-04 23:09 PDT, Alexey Proskuryakov
sam: review+
patch for landing (7.17 KB, patch)
2014-04-05 17:22 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-04-04 23:09:26 PDT
Created attachment 228658 [details] proposed fix
Sam Weinig
Comment 2 2014-04-05 16:19:47 PDT
Comment on attachment 228658 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=228658&action=review > Source/WebCore/WebCore.xcodeproj/project.pbxproj:4615 > + B2D3DA640D006CD600EF6F27 /* opentype/OpenTypeMathData.cpp in Sources */ = {isa = PBXBuildFile; fileRef = B2D3DA530D006CD600EF6F27 /* opentype/OpenTypeMathData.cpp */; }; > + B2D3DA650D006CD600EF6F27 /* opentype/OpenTypeMathData.h in Headers */ = {isa = PBXBuildFile; fileRef = B2D3DA540D006CD600EF6F27 /* opentype/OpenTypeMathData.h */; settings = {ATTRIBUTES = (Private, ); }; }; > + B2D3EA650D006CD600EF6F28 /* opentype/OpenTypeTypes.h in Headers */ = {isa = PBXBuildFile; fileRef = B2D3EA540D006CD600EF6F28 /* opentype/OpenTypeTypes.h */; settings = {ATTRIBUTES = (Private, ); }; }; These Xcode project changes seem unrelated.
Alexey Proskuryakov
Comment 3 2014-04-05 17:22:05 PDT
Created attachment 228689 [details] patch for landing
WebKit Commit Bot
Comment 4 2014-04-05 18:00:28 PDT
Comment on attachment 228689 [details] patch for landing Clearing flags on attachment: 228689 Committed r166847: <http://trac.webkit.org/changeset/166847>
WebKit Commit Bot
Comment 5 2014-04-05 18:00:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.