REGRESSION (NetworkProcess): Subresources fail to load from AppCache https://bugs.webkit.org/show_bug.cgi?id=131262 <rdar://problem/15370653>

Reviewed by Sam Weinig.

Source/WebCore:

Exported ApplicationCacheHost::maybeLoadResource. Changed it to take a const
reference to ResourceRequest, as appropriate for WebResourceLoadScheduler.

* WebCore.exp.in:
* WebCore.xcodeproj/project.pbxproj:
* loader/appcache/ApplicationCacheHost.cpp:
(WebCore::ApplicationCacheHost::maybeLoadResource):
* loader/appcache/ApplicationCacheHost.h:

Source/WebKit2:

* WebProcess/Network/WebResourceLoadScheduler.cpp:
(WebKit::WebResourceLoadScheduler::scheduleLoad): Check application cache,
as done in ResourceLoader::start() for in-process loads.


Canonical link: https://commits.webkit.org/149332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166847 268f45cc-cd09-0410-ab3c-d52691b4dbfc